# qdk-chemistry

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INSTALL.md  README.md  SECURITY.md  SUPPORT.md
cpp/: CMakeLists.txt
cpp/cmake/: cuda.cmake  qdk-uarch.cmake  qdkConfig.cmake.in  third_party.cmake
cpp/cmake/modules/: DependencyManager.cmake
cpp/examples/: CMakeLists.txt  simple_e2e.cpp
cpp/include/qdk/: chemistry.hpp
cpp/include/qdk/chemistry/: config.hpp.in  constants.hpp
cpp/include/qdk/chemistry/algorithms/: active_space.hpp  algorithm.hpp  coupled_cluster.hpp  hamiltonian.hpp  localization.hpp  mc.hpp  mcscf.hpp  pmc.hpp  scf.hpp  stability.hpp
cpp/include/qdk/chemistry/data/: ansatz.hpp  basis_set.hpp  configuration.hpp  configuration_set.hpp  coupled_cluster.hpp  data_class.hpp  element_data.hpp  hamiltonian.hpp  orbitals.hpp  pauli_operator.hpp  settings.hpp  stability_result.hpp  structure.hpp  wavefunction.hpp
cpp/include/qdk/chemistry/utils/: hash.hpp  omp_utils.hpp  string_utils.hpp  valence_space.hpp
cpp/manifest/qdk-chemistry/: cgmanifest.json
cpp/src/qdk/chemistry/algorithms/: CMakeLists.txt  active_space.cpp  coupled_cluster.cpp  hamiltonian.cpp  localization.cpp  mc.cpp  mcscf.cpp  pmc.cpp  scf.cpp  stability.cpp
cpp/src/qdk/chemistry/data/: CMakeLists.txt  ansatz.cpp  basis_set.cpp  configuration.cpp  configuration_set.cpp  coupled_cluster.cpp  element_data.cpp  filename_utils.hpp  hamiltonian.cpp  hdf5_error_handling.hpp  hdf5_serialization.cpp  hdf5_serialization.hpp  hdf5_serialization_impl.hpp  json_serialization.cpp  json_serialization.hpp  orbitals.cpp  pauli_operator.cpp  settings.cpp  stability_result.cpp  structure.cpp  wavefunction.cpp
cpp/src/qdk/chemistry/utils/: CMakeLists.txt  omp_utils.cpp  valence_space.cpp
cpp/tests/: CMakeLists.txt  qdk_test_main.cpp  test_active_space.cpp  test_ansatz.cpp  test_basis_set.cpp  test_configuration.cpp  test_coupled_cluster.cpp  test_coupled_cluster_calculator.cpp  test_hamiltonian.cpp  test_localization.cpp  test_macis.cpp  test_mc.cpp  test_mcscf.cpp  test_model_orbitals.cpp  test_mp2.cpp  test_orbitals_comprehensive.cpp  test_orbitals_edge_cases.cpp  test_pauli_operator.cpp  test_rdms.cpp  test_scf.cpp  test_settings.cpp  test_stability.cpp  test_structure.cpp  test_structure_comprehensive.cpp  test_utils.cpp  test_wavefunction.cpp  test_wfn_cas.cpp  test_wfn_cc.cpp  test_wfn_sci.cpp  test_wfn_sd.cpp  testing_utilities.hpp  ut_common.hpp
python/: CMakeLists.txt  README.md  pyproject.toml
python/manifest/: cgmanifest.json
python/src/pybind11/: constants.cpp  module.cpp  qdk_scf_config.cpp
python/src/pybind11/algorithms/: active_space.cpp  cc.cpp  factory_bindings.hpp  hamiltonian.cpp  localizer.cpp  mc.cpp  mcscf.cpp  pmc.cpp  scf.cpp  stability.cpp
python/src/pybind11/data/: ansatz.cpp  basis_set.cpp  configuration.cpp  configuration_set.cpp  coupled_cluster.cpp  data_class.cpp  hamiltonian.cpp  orbitals.cpp  path_utils.hpp  pauli_operator.cpp  property_binding_helpers.hpp  settings.cpp  stability_result.cpp  structure.cpp  wavefunction.cpp
python/src/pybind11/utils/: valence_space.cpp
python/src/qdk_chemistry/: __init__.py  constants.py  definitions.py  noise_models.py
python/src/qdk_chemistry/_core/: constants.pyi
python/src/qdk_chemistry/algorithms/: __init__.py  active_space_selector.py  base.py  coupled_cluster_calculator.py  hamiltonian_constructor.py  multi_configuration_calculator.py  multi_configuration_scf.py  orbital_localizer.py  projected_multi_configuration_calculator.py  qubit_mapper.py  registry.py  scf_solver.py  stability_checker.py
python/src/qdk_chemistry/algorithms/circuit_executor/: __init__.py  base.py  qdk.py
python/src/qdk_chemistry/algorithms/energy_estimator/: __init__.py  energy_estimator.py  qsharp.py
python/src/qdk_chemistry/algorithms/phase_estimation/: __init__.py  base.py  iterative_phase_estimation.py
python/src/qdk_chemistry/algorithms/qubit_mapper/: __init__.py  qdk_qubit_mapper.py  qubit_mapper.py
python/src/qdk_chemistry/algorithms/state_preparation/: __init__.py  sparse_isometry.py  state_preparation.py
python/src/qdk_chemistry/data/: __init__.py  base.py  circuit_executor_data.py  estimator_data.py  noise_models.py  qpe_result.py  qubit_hamiltonian.py
python/src/qdk_chemistry/phase_estimation/: __init__.py  base.py  iterative_qpe.py  traditional_qpe.py
python/src/qdk_chemistry/plugins/: __init__.py
python/src/qdk_chemistry/plugins/pyscf/: __init__.py  active_space_avas.py  conversion.py  coupled_cluster.py  (+5 more)
python/src/qdk_chemistry/utils/: __init__.py  bitstring.py  circuit.py  cubegen.py  enum.py  phase.py  statevector.py  telemetry.py  telemetry_events.py  time_evolution.py  wavefunction.py
python/tests/: __init__.py  conftest.py  reference_tolerances.py  test_active_space.py  test_algorithms.py  test_algorithms_registry.py  test_ansatz.py  test_ansatz_property_bindings.py  test_basis_set.py  test_circuit_executor_data.py  test_circuit_executor_qdk_full_state.py  test_configuration_set.py  test_constants_binding.py  test_constants_documentation.py  test_coupled_cluster.py  test_data_class.py  test_docs_examples.py  test_encoding_metadata.py  test_energy_estimator.py  test_energy_expectation_result.py  test_estimator_data.py  test_hamiltonian.py  test_helpers.py  test_interop_qiskit_circuit.py  test_interop_qiskit_circuit_executor.py  test_interop_qiskit_energy_estimator.py  test_interop_qiskit_noise_model.py  test_interop_qiskit_phase_estimation_standard.py  test_interop_qiskit_state_prep_energy_validation.py  test_interop_qiskit_transpiler.py  test_interop_qsharp_energy_estimator.py  test_mc.py  test_mcscf.py  test_measurement_data.py  test_mp2.py  test_noise_models.py  test_orbitals.py  test_phase_estimation_base.py  test_phase_estimation_iterative.py  test_phase_estimation_traditional.py  (+27 more)
python/tests/test_data/: 4e4o-ethylene_2det-can-7967f80e_2_1.qasm  ethylene.structure.xyz  ethylene_4e4o_2det.hamiltonian.json  f2.structure.xyz  f2_10e6o.hamiltonian.json  make_ethylene.py  make_f2.py
(+367 files in other folders)
