[build-system]
build-backend = "scikit_build_core.build"
requires = [
  "scikit-build-core>=0.10.0",
  "pybind11>=2.13.6",
  "numpy>=1.20.0,<2.4.0",
]


[project]
authors = [
  {name = "QDK/Chemistry Development Team", email = "qdk-chemistry@microsoft.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Quantum",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Education",
]
dependencies = [
  "numpy>=1.20.0,<2.4.0",
  "scipy>=1.7.0",
  "matplotlib==3.10.0",
  "qiskit[qasm3-import]>=2.2.0",
  "qiskit-aer",
  "qiskit-nature",
  "pylatexenc==2.10",
  "ruamel-yaml>=0.18.10",
  "pydantic-settings>=2.9.1",
  "qdk[jupyter]==1.23.1.dev0",
  "pybind11-stubgen>=2.5.1",
  "h5py>=3.0.0"
]
description = "Quantum Development Kit - Chemistry Library"
dynamic = ["version"]
license = { file = "LICENSE.txt" }
name = "qdk-chemistry"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
all = [
  "qdk-chemistry[coverage,dev,docs,plugins]"
]
coverage = [
  "coverage",
  "pytest",
  "pytest-cov",
  "gcovr"
]
dev = [
  "coverage",
  "mypy",
  "pytest",
  "ruff"
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
  "breathe",
  "sphinx-autodoc-typehints",
  "sphinx-inline-tabs",
  "sphinxcontrib-napoleon",
  "sphinxcontrib-bibtex",
  "sphinx_copybutton"
]
plugins = [
  "pyscf>=2.9.0"
]

# TODO (NAB): update these URLs with final ones, workitem: 41430
[project.urls]
Documentation = "https://qdk-chemistry.readthedocs.io"
Homepage = "https://github.com/example/qdk-chemistry"
Issues = "https://github.com/example/qdk-chemistry/issues"
Repository = "https://github.com/example/qdk-chemistry"

# Configuration for C++ coverage reporting
[tool.coverage.cpp]
# Exclude patterns for C++ coverage
exclude = [
  "*/tests/*",
  "*/external/*",
  "*/third_party/*"
]
# Output format for C++ coverage reports
output_format = ["html", "xml"]

[tool.coverage.paths]
source = [
  "src/",
  "*/site-packages/"
]

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
  "def __repr__",
  "def __str__",
  "raise NotImplemented",
  "if 0:",
  "raise RuntimeError",
  "raise AssertionError",
  "raise NotImplementedError"
]
ignore_errors = true

[tool.coverage.run]
data_file = ".coverage"
omit = [
  "*/tests/*",
  "*/test_*"
]
parallel = false
source = ["src"]

[tool.mypy]
exclude = ["tests"]
warn_redundant_casts = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "numpy",
  "matplotlib"
]

[tool.pytest.ini_options]
addopts = [
  "-ra ",  # show extra summary info for skipped, failed, and xfailed tests
  "-v"  # verbose output
]
filterwarnings = [
  "ignore::DeprecationWarning:qiskit",
  "ignore::DeprecationWarning:qiskit_aer"
]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
indent-style = 'space'
quote-style = 'double'

[tool.ruff.lint]
ignore = [
  'D203',  # Incompatible with D211 `no-blank-line-before-class`
  'D213',  # Incompatible with D212 `multi-line-summary-second-line`
  'D401',  # non-imperative-mood
  'PLR0912',  # too-many-branches
  'PLR0913',  # too-many-arguments
  'PLR0915',  # too-many-statements
  'PLR2004',  # magic-value-comparison
  'INP001'  # Allow __init__.py files without PEP 420 compliance
]
select = [
  'ARG',  # flake8-unused-argument
  'TC',  # flake8-type-checking
  'SIM',  # flake8-simplify
  'SLF',  # flake8-self
  'RET',  # flake8-return
  'RSE',  # flake8-raise
  'INP',  # flake8-no-pep420
  'A',  # flake8-builtins
  'B',  # flake8-bugbear
  'BLE',  # flake8-blind-except
  'I',  # isort
  'NPY',  # numpy-rules
  'N',  # pep8-naming
  'E',  # pycodecstyle-error
  'W',  # pycodecstyle-warning
  'D',  # pydocstyle
  'F',  # pyflakes
  'PL',  # pylint
  'RUF',  # ruff
  'UP',
  'C4',
  'DTZ',
  'T10',
  'PIE',
  'PT',
  'ERA'
]

[tool.ruff.lint.per-file-ignores]
"**/docs/*" = [
  "INP001",  # Ignore __init__.py in docs directory
  "A001",  # Variable `copyright` is shadowing a Python builtin
  "ARG001",  # Unused function argument
  "D103"  # Missing docstring in public function
]
"**/tests/*" = [
  "D101",  # undocumented-public-class
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D107",  # Missing docstring in `__init__`
  "SLF001"  # Private member accessed
]
"**/tests/test_data/*.py" = [
  "INP001"  # Standalone scripts to create test data, not part of a package
]
"__init__.py" = [
  "F401"  # imported but unused; consider removing
]

# Scikit-build-core configuration
[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"
# Build in current directory (python/)
cmake.source-dir = "."
# Enable verbose output for debugging
cmake.verbose = true
install.components = ["_core", "qdk_chemistry_resources"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.wheel]
packages = ["src/qdk_chemistry"]
install-dir = "qdk_chemistry"

[tool.scikit-build.cmake.define]
BUILD_SHARED_LIBS = "OFF"
QDK_CHEMISTRY_ENABLE_COVERAGE = {env="QDK_CHEMISTRY_ENABLE_COVERAGE", default="OFF"}
QDK_UARCH = {env="QDK_UARCH", default="native"}
QDK_ENABLE_OPENMP = {env="QDK_ENABLE_OPENMP"}
CMAKE_BUILD_PARALLEL_LEVEL = {env="CMAKE_BUILD_PARALLEL_LEVEL", default="4"}

[[tool.scikit-build.overrides]]
if.env.CMAKE_BUILD_TYPE = "Debug"
cmake.build-type = "Debug"

[[tool.scikit-build.overrides]]
if.env.CMAKE_BUILD_TYPE = "RelWithDebInfo"
cmake.build-type = "RelWithDebInfo"

# Use setuptools_scm to get version from git tags
[tool.setuptools_scm]
local_scheme = "node-and-date"  # Append the git commit hash and date for dev versions
root = ".."  # finds the .git in the root directory to help with versioning
